# personalscrapers

./: LICENSE  main.py  pyproject.toml  socialdeal.html
personalscrapers/: __init__.py
personalscrapers/src/: socialdeal.py
