[tool.poetry]
name = "personalscrapers"
version = "0.1.1"
description = ""
authors = ["Paulo <pm85@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
bs4 = "^0.0.1"
requests = "^2.31.0"
pandas = "^2.1.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
